--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="date_card">#545454</color>
+    <color name="gradient_color_1">#662d91</color>
+    <color name="gradient_color_2">#ae388f</color>
+    <color name="transparent">#00000000</color>
 </resources>
