--- a/app/src/main/res/layoutii/post_item.xml
+++ b/app/src/main/res/layoutii/post_item.xml
@@ -31,9 +31,8 @@
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="215dp"
-                    android:src="@mipmap/card_image"
-                    android:contentDescription="@string/image_article"
                     android:scaleType="centerCrop"
+                    android:src="@mipmap/card_image"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/jazeera_regular"
-                    android:text="@string/s"
+                    android:text="مجلس النواب يحسم في جدل تقاعد البرلمانيين الأسبوع المقبل"
                     android:textColor="#000"
                     android:textDirection="rtl"
                     android:textSize="20sp" />
