--- a/app/src/main/res/layout/activity_single_page.xml
+++ b/app/src/main/res/layout/activity_single_page.xml
@@ -8,7 +8,7 @@
     tools:context=".SinglePage">
 
     <TextView
-        android:id="@+id/test_id_text"
+        android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
